--- a/audio/index.html
+++ b/audio/index.html
@@ -32,13 +32,24 @@
             border-radius: 20px;
         }
 
+        a,
         h3 {
             color: #6b9080;
             font-weight: bolder;
+            text-decoration: none;
         }
 
         audio {
             margin-top: 15px;
+        }
+
+        a{
+            line-height: 50px;
+            margin: 10px;
+            padding: 10px;
+            background: #6b9080;
+            color: #f6fff8;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -49,9 +60,10 @@
         <div class="card">
             <div>
                 <h3>王攀元《倦鳥》日文錄音：</h3>
-                <audio controls src="王攀元《倦鳥》日文錄音.m4a"><a href="王攀元《倦鳥》日文錄音.m4a">
-                        Download audio
-                    </a></audio>
+                <audio controls src="王攀元《倦鳥》日文錄音.m4a"></audio><br />
+                <a href="王攀元《倦鳥》日文錄音.m4a" download>
+                    下載錄音
+                </a>
             </div>
         </div>
     </div>
