--- a/audio/audio2.html
+++ b/audio/audio2.html
@@ -24,9 +24,19 @@
     <div>
         <h3>中文錄音檔：</h3>
         <audio controls autoplay>
-            <source src="">
+            <source src="陳庭詩_意志.wav">
             Your browser does not support the audio element.
           </audio>
     </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
+    <script>
+        
+        $(document).ready(function(){
+            window.location.href="陳庭詩_意志.wav";
+        });
+
+    </script>
 </body>
 </html>
