--- a/audio/index.html
+++ b/audio/index.html
@@ -24,9 +24,18 @@
     <div>
         <h3>王攀元《倦鳥》日文錄音：</h3>
         <audio controls autoplay>
-            <source src="王攀元《倦鳥》日文錄音.m4a">
+            <source src="王攀元_倦鳥.wav">
             Your browser does not support the audio element.
           </audio>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
+    <script>
+        
+        $(document).ready(function(){
+            window.location.href="王攀元_倦鳥.wav";
+        });
+
+    </script>
 </body>
 </html>
