--- a/audio/audio2.html
+++ b/audio/audio2.html
@@ -24,7 +24,7 @@
     <div>
         <h3>中文錄音檔：</h3>
         <audio controls autoplay>
-            <source src="陳庭詩_意志.wav">
+            <source src="合併.mp3">
             Your browser does not support the audio element.
           </audio>
     </div>
@@ -34,7 +34,7 @@
     <script>
         
         $(document).ready(function(){
-            window.location.href="陳庭詩_意志.wav";
+            window.location.href="合併.mp3";
         });
 
     </script>
