--- a/audio/index.html
+++ b/audio/index.html
@@ -24,7 +24,7 @@
     <div>
         <h3>王攀元《倦鳥》日文錄音：</h3>
         <audio controls autoplay>
-            <source src="王攀元_倦鳥.wav">
+            <source src="王攀元《倦鳥》日文錄音.m4a">
             Your browser does not support the audio element.
           </audio>
     </div>
@@ -33,7 +33,7 @@
     <script>
         
         $(document).ready(function(){
-            window.location.href="王攀元_倦鳥.wav";
+            window.location.href="王攀元《倦鳥》日文錄音.m4a";
         });
 
     </script>
