--- a/audio/audio2.html
+++ b/audio/audio2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>王攀元《倦鳥》日文錄音</title>
+    <title>王攀元《倦鳥》中文錄音</title>
 
     <style>
         * {
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div>
-        <h3>中文錄音檔：</h3>
+        <h3>中文錄音：</h3>
         <audio controls autoplay>
             <source src="合併.mp3">
             Your browser does not support the audio element.
