--- a/audio/index.html
+++ b/audio/index.html
@@ -22,9 +22,9 @@
 </head>
 <body>
     <div>
-        <h3>中文錄音：</h3>
+        <h3>日文錄音：</h3>
         <audio controls autoplay>
-            <source src="合併.mp3">
+            <source src="王攀元《倦鳥》日文錄音.m4a">
             Your browser does not support the audio element.
           </audio>
     </div>
@@ -33,7 +33,7 @@
     <script>
         
         $(document).ready(function(){
-            window.location.href="合併.mp3";
+            window.location.href="王攀元《倦鳥》日文錄音.m4a";
         });
 
     </script>
