--- a/travel/index.html
+++ b/travel/index.html
@@ -10,102 +10,29 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/loader.css">
 </head>
 
 <body>
-    <button id="prev-btn">
+    <div class="loader_bg">
+        <div class="loader"></div>
+    </div>
+
+    <button id="prev-btn" class="pc">
         <i class="fas fa-arrow-circle-left"></i>
     </button>
 
-    <div id="book" class="book">
-        <!-- p1 -->
-        <div id="p1" class="paper">
-            <div class="front">
-                <div id="f1" class="front-content">
-                    <h1>Front 1</h1>
-                </div>
-            </div>
-            <div class="back">
-                <div id="b1" class="back-content">
-                    <h1>Back 1</h1>
-                </div>
-            </div>
-        </div>
+    <div id="book" class="book pc"></div>
 
-        <!-- p2 -->
-        <div id="p2" class="paper">
-            <div class="front">
-                <div id="f2" class="front-content">
-                    <h1>Front 2</h1>
-                </div>
-            </div>
-            <div class="back">
-                <div id="b2" class="back-content">
-                    <h1>Back 2</h1>
-                </div>
-            </div>
-        </div>
-
-        <!-- p3 -->
-        <div id="p3" class="paper">
-            <div class="front">
-                <div id="f3" class="front-content">
-                    <h1>Front 3</h1>
-                </div>
-            </div>
-            <div class="back">
-                <div id="b3" class="back-content">
-                    <h1>Back 3</h1>
-                </div>
-            </div>
-        </div>
-
-        <!-- p4 -->
-        <div id="p4" class="paper">
-            <div class="front">
-                <div id="f4" class="front-content">
-                    <h1>Front 4</h1>
-                </div>
-            </div>
-            <div class="back">
-                <div id="b4" class="back-content">
-                    <h1>Back 4</h1>
-                </div>
-            </div>
-        </div>
-
-        <!-- p5 -->
-        <div id="p5" class="paper">
-            <div class="front">
-                <div id="f5" class="front-content">
-                    <h1>Front 5</h1>
-                </div>
-            </div>
-            <div class="back">
-                <div id="b5" class="back-content">
-                    <h1>Back 5</h1>
-                </div>
-            </div>
-        </div>
-
-        <!-- p6 -->
-        <div id="p6" class="paper">
-            <div class="front">
-                <div id="f6" class="front-content">
-                    <h1>Front 6</h1>
-                </div>
-            </div>
-            <div class="back">
-                <div id="b6" class="back-content">
-                    <h1>Back 6</h1>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <button id="next-btn">
+    <button id="next-btn" class="pc">
         <i class="fas fa-arrow-circle-right"></i>
     </button>
+
+    <div class="phone">
+        <div id="paper">
+            <img src="resource/p1.jpg" class="image">
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
         integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
