--- a/travel/index.html
+++ b/travel/index.html
@@ -29,8 +29,10 @@
     </button>
 
     <div class="phone">
+        <div class="left"></div>
+        <div class="right"></div>
         <div id="paper">
-            <img src="resource/p1.jpg" class="image">
+            <img src="resource/p1.jpg" class="phone-img">
         </div>
     </div>
 
