--- a/learn/index.html
+++ b/learn/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="card">
-        <div class="top">
+        <div class="top hide">
             <div class="quation" id="q">あ</div>
         </div>
-        <div class="bottom">
+        <div class="bottom hide">
             <div class="answers">
                 <div class="answer" id="a">a</div>
                 <div class="answer" id="b">i</div>
@@ -21,14 +21,17 @@
                 <div class="answer" id="d">e</div>
             </div>
         </div>
+        <div class="start-btn">
+            <div id="btn">Start!</div>
+        </div>
     </div>
 
 
-    <div class="test">
-        <!-- <div class="q"></div>
-        <div class="a"></div> -->
+    <!-- <div class="test">
+        <div class="q"></div>
+        <div class="a"></div>
         <div class="btn">next</div>
-    </div>
+    </div> -->
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
         integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
